saga/delivery.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  type: NodePort
  selector:
    app: delivery-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-db-service
spec:
  type: NodePort
  selector:
    app: delivery-db-deployment
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-deployment
  template:
    metadata:
      labels:
        app: delivery-deployment
    spec:
      containers:
        - name: delivery
          image: vaomaohao/delivery:latest
          ports:
            - name: web
              containerPort: 8000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: delivery-db-deployment
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: delivery-db-deployment
  template:
    metadata:
      labels:
        app: delivery-db-deployment
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgredb
