saga/payment.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: NodePort
  selector:
    app: payment-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-db-service
spec:
  type: NodePort
  selector:
    app: payment-db-deployment
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-deployment
  template:
    metadata:
      labels:
        app: payment-deployment
    spec:
      containers:
        - name: payment
          image: vaomaohao/payment:latest
          ports:
            - name: web
              containerPort: 8000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: payment-db-deployment
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: payment-db-deployment
  template:
    metadata:
      labels:
        app: payment-db-deployment
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgredb
