saga/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch-homework-ingress
#  namespace: otus-homework
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: Prefix
            path: "/camunda/(.*)"
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/order/(.*)"
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/payment/(.*)"
            backend:
              service:
                name: payment-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/product-stock/(.*)"
            backend:
              service:
                name: stock-service
                port:
                  number: 8000
          - pathType: Prefix
            path: "/courier/(.*)"
            backend:
              service:
                name: delivery-service
                port:
                  number: 8000
